fix code overflow

--- a/_includes/css/_monokai.scss
+++ b/_includes/css/_monokai.scss
@@ -8,6 +8,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
   display: block;
   padding: 0.5em;
   background: #23241f;
+  overflow: scroll;
 }
 
 .hljs,
